--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "The sunny generic twisty puzzle solver",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --compilers js:babel/register"
+    "test": "mocha --compilers js:babel/register",
+    "compile-for-twosolve": "babel lib -d twosolve/lib/compiled"
   },
   "keywords": [
     "rubik"
