--- a/twosolve/package.json
+++ b/twosolve/package.json
@@ -3,6 +3,7 @@
     "directories": {},
     "dependencies": {
       "cube-simian": "npm:cube-simian@^0.0.3",
+      "js-schema": "npm:js-schema@^1.0.1",
       "react": "npm:react@^0.13.3"
     },
     "devDependencies": {
