--- a/twosolve/package.json
+++ b/twosolve/package.json
@@ -4,7 +4,8 @@
     "dependencies": {
       "cube-simian": "npm:cube-simian@^0.0.3",
       "js-schema": "npm:js-schema@^1.0.1",
-      "react": "npm:react@^0.13.3"
+      "react": "npm:react@^0.13.3",
+      "react-style": "npm:react-style@^0.5.5"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.1.13",
