--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   },
   "dependencies": {
     "benchmark": "^1.0.0",
-    "js-schema": "^0.7.2",
-    "lodash": "^3.10.1"
+    "js-schema": "^0.7.2"
   }
 }
