--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "babel-core": "^6.0.20",
     "babel-preset-es2015": "^6.0.15",
+    "babel-preset-stage-2": "^6.0.15",
     "claim": "^1.0.1",
     "mocha": "^2.2.4"
   },
