--- a/twosolve/package.json
+++ b/twosolve/package.json
@@ -19,7 +19,9 @@
   "devDependencies": {
     "babel": "^6.0.15",
     "babel-core": "^6.0.20",
+    "babel-preset-es2015": "^6.1.2",
     "babel-preset-react": "^6.0.15",
-    "babel-preset-stage-2": "^6.0.15"
+    "babel-preset-stage-2": "^6.0.15",
+    "mocha": "^2.3.3"
   }
 }
