--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mocha": "^2.2.4"
   },
   "dependencies": {
+    "babel-polyfill": "^6.7.4",
     "benchmark": "^1.0.0",
     "js-schema": "^0.7.2"
   }
